--- a/src/output.css
+++ b/src/output.css
@@ -391,8 +391,6 @@
     --animate-fade-in-x: fade-in-x 800ms ease-in-out;
     --animate-fade-in-x-i: fade-in-x-i 800ms ease-in-out;
     --animate-fade-in-scale: fade-in-scale 600ms ease-in-out;
-    --animate-fade-in-y: fade-in-y 1s ease-in-out;
-    --animate-fade-catchau: fade-catchau 600ms ease-in-out;
   }
 }
 @layer base {
@@ -633,6 +631,9 @@
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
+  }
   .left-10 {
     left: calc(var(--spacing) * 10);
   }
@@ -756,6 +757,9 @@
       max-width: 96rem !important;
     }
   }
+  .m-1 {
+    margin: calc(var(--spacing) * 1);
+  }
   .mx-\[1px\] {
     margin-inline: 1px;
   }
@@ -788,6 +792,9 @@
   }
   .mr-5 {
     margin-right: calc(var(--spacing) * 5);
+  }
+  .mb-2 {
+    margin-bottom: calc(var(--spacing) * 2);
   }
   .box-border {
     box-sizing: border-box;
@@ -885,6 +892,15 @@
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
+  .h-\[100vh\] {
+    height: 100vh;
+  }
+  .h-\[103vh\] {
+    height: 103vh;
+  }
+  .h-\[10rem\] {
+    height: 10rem;
+  }
   .h-\[20rem\] {
     height: 20rem;
   }
@@ -899,12 +915,6 @@
   }
   .h-\[35rem\] {
     height: 35rem;
-  }
-  .h-\[100vh\] {
-    height: 100vh;
-  }
-  .h-\[103vh\] {
-    height: 103vh;
   }
   .h-\[680px\] {
     height: 680px;
@@ -927,8 +937,14 @@
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
+  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
+  }
+  .w-12 {
+    width: calc(var(--spacing) * 12);
   }
   .w-60 {
     width: calc(var(--spacing) * 60);
@@ -936,11 +952,17 @@
   .w-128 {
     width: calc(var(--spacing) * 128);
   }
+  .w-\[32rem\] {
+    width: 32rem;
+  }
   .w-\[60rem\] {
     width: 60rem;
   }
   .w-\[64rem\] {
     width: 64rem;
+  }
+  .w-\[66rem\] {
+    width: 66rem;
   }
   .w-auto {
     width: auto;
@@ -1088,6 +1110,9 @@
   .transform-none {
     transform: none;
   }
+  .animate-bounce-alert {
+    animation: var(--animate-bounce-alert);
+  }
   .animate-fade-in-fast {
     animation: var(--animate-fade-in-fast);
   }
@@ -1096,9 +1121,6 @@
   }
   .animate-fade-in-x-i {
     animation: var(--animate-fade-in-x-i);
-  }
-  .animate-fade-in-y {
-    animation: var(--animate-fade-in-y);
   }
   .animate-fade-in-y-down {
     animation: var(--animate-fade-in-y-down);
@@ -1117,6 +1139,9 @@
   }
   .animate-none {
     animation: none;
+  }
+  .animate-shake {
+    animation: var(--animate-shake);
   }
   .touch-pinch-zoom {
     --tw-pinch-zoom: pinch-zoom;
@@ -1395,10 +1420,19 @@
   .gap-10 {
     gap: calc(var(--spacing) * 10);
   }
+  .gap-x-2 {
+    column-gap: calc(var(--spacing) * 2);
+  }
+  .gap-x-4 {
+    column-gap: calc(var(--spacing) * 4);
+  }
   .space-y-reverse {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 1;
     }
+  }
+  .gap-y-4 {
+    row-gap: calc(var(--spacing) * 4);
   }
   .space-x-reverse {
     :where(& > :not(:last-child)) {
@@ -1552,6 +1586,10 @@
     border-bottom-right-radius: 0.25rem;
     border-bottom-left-radius: 0.25rem;
   }
+  .rounded-b-lg {
+    border-bottom-right-radius: var(--radius-lg);
+    border-bottom-left-radius: var(--radius-lg);
+  }
   .rounded-br {
     border-bottom-right-radius: 0.25rem;
   }
@@ -1561,11 +1599,17 @@
   .rounded-br-sm {
     border-bottom-right-radius: var(--radius-sm);
   }
+  .rounded-br-xl {
+    border-bottom-right-radius: var(--radius-xl);
+  }
   .rounded-bl {
     border-bottom-left-radius: 0.25rem;
   }
   .rounded-bl-3xl {
     border-bottom-left-radius: var(--radius-3xl);
+  }
+  .rounded-bl-4xl {
+    border-bottom-left-radius: var(--radius-4xl);
   }
   .rounded-bl-sm {
     border-bottom-left-radius: var(--radius-sm);
@@ -1630,6 +1674,24 @@
     --tw-border-style: solid;
     border-style: solid;
   }
+  .border-\[\#4caf50\] {
+    border-color: #4caf50;
+  }
+  .border-\[\#f85149\] {
+    border-color: #f85149;
+  }
+  .border-green-500 {
+    border-color: var(--color-green-500);
+  }
+  .border-red-500 {
+    border-color: var(--color-red-500);
+  }
+  .border-slate-200 {
+    border-color: var(--color-slate-200);
+  }
+  .border-slate-300 {
+    border-color: var(--color-slate-300);
+  }
   .bg-\(--my_variable\) {
     background-color: var(--my_variable);
   }
@@ -1648,8 +1710,20 @@
   .bg-\[var\(--my_variable\)\] {
     background-color: var(--my_variable);
   }
+  .bg-amber-300 {
+    background-color: var(--color-amber-300);
+  }
+  .bg-black {
+    background-color: var(--color-black);
+  }
   .bg-black\/70 {
     background-color: color-mix(in oklab, var(--color-black) 70%, transparent);
+  }
+  .bg-gray-100 {
+    background-color: var(--color-gray-100);
+  }
+  .bg-indigo-500 {
+    background-color: var(--color-indigo-500);
   }
   .bg-indigo-600 {
     background-color: var(--color-indigo-600);
@@ -1665,6 +1739,9 @@
   }
   .bg-slate-100 {
     background-color: var(--color-slate-100);
+  }
+  .bg-slate-300 {
+    background-color: var(--color-slate-300);
   }
   .bg-white {
     background-color: var(--color-white);
@@ -1684,6 +1761,12 @@
   .bg-radial {
     --tw-gradient-position: in oklab;
     background-image: radial-gradient(var(--tw-gradient-stops));
+  }
+  .bg-\[linear-gradient\(\#4caf501a\,\#4caf501a\)\] {
+    background-image: linear-gradient(#4caf501a,#4caf501a);
+  }
+  .bg-\[linear-gradient\(\#f851491a\,\#f851491a\)\] {
+    background-image: linear-gradient(#f851491a,#f851491a);
   }
   .bg-none {
     background-image: none;
@@ -1847,8 +1930,17 @@
   .object-top {
     object-position: top;
   }
+  .p-1 {
+    padding: calc(var(--spacing) * 1);
+  }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
+  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
+  }
+  .px-6 {
+    padding-inline: calc(var(--spacing) * 6);
   }
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
@@ -1856,14 +1948,32 @@
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
+  .py-3 {
+    padding-block: calc(var(--spacing) * 3);
+  }
+  .py-5 {
+    padding-block: calc(var(--spacing) * 5);
+  }
+  .py-6 {
+    padding-block: calc(var(--spacing) * 6);
+  }
   .pt-1 {
     padding-top: calc(var(--spacing) * 1);
   }
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
   }
+  .pr-14 {
+    padding-right: calc(var(--spacing) * 14);
+  }
   .pb-32 {
     padding-bottom: calc(var(--spacing) * 32);
+  }
+  .pl-4 {
+    padding-left: calc(var(--spacing) * 4);
+  }
+  .pl-5 {
+    padding-left: calc(var(--spacing) * 5);
   }
   .pl-6 {
     padding-left: calc(var(--spacing) * 6);
@@ -1910,6 +2020,10 @@
   .align-top {
     vertical-align: top;
   }
+  .text-2xl {
+    font-size: var(--text-2xl);
+    line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
   .text-3xl {
     font-size: var(--text-3xl);
     line-height: var(--tw-leading, var(--text-3xl--line-height));
@@ -1934,6 +2048,10 @@
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
   }
+  .text-sm {
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
+  }
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
@@ -1957,6 +2075,10 @@
   .font-light {
     --tw-font-weight: var(--font-weight-light);
     font-weight: var(--font-weight-light);
+  }
+  .font-medium {
+    --tw-font-weight: var(--font-weight-medium);
+    font-weight: var(--font-weight-medium);
   }
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
@@ -2035,8 +2157,14 @@
   .\[color\:red\]\/50\! {
     color: color-mix(in oklab, red 50%, transparent) !important;
   }
+  .text-\[\#2e7d32\] {
+    color: #2e7d32;
+  }
   .text-\[\#FF6D00\] {
     color: #FF6D00;
+  }
+  .text-\[\#b22b2b\] {
+    color: #b22b2b;
   }
   .text-\[\#ff6f00\] {
     color: #ff6f00;
@@ -2044,11 +2172,26 @@
   .text-\[\#ffbf00\] {
     color: #ffbf00;
   }
+  .text-blue-600 {
+    color: var(--color-blue-600);
+  }
+  .text-gray-100 {
+    color: var(--color-gray-100);
+  }
+  .text-gray-400 {
+    color: var(--color-gray-400);
+  }
+  .text-green-500 {
+    color: var(--color-green-500);
+  }
   .text-indigo-600 {
     color: var(--color-indigo-600);
   }
   .text-indigo-700 {
     color: var(--color-indigo-700);
+  }
+  .text-red-500 {
+    color: var(--color-red-500);
   }
   .text-slate-100 {
     color: var(--color-slate-100);
@@ -2065,8 +2208,14 @@
   .text-slate-600 {
     color: var(--color-slate-600);
   }
+  .text-slate-700 {
+    color: var(--color-slate-700);
+  }
   .text-slate-900 {
     color: var(--color-slate-900);
+  }
+  .text-transparent {
+    color: transparent;
   }
   .capitalize {
     text-transform: capitalize;
@@ -2241,8 +2390,19 @@
     --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .shadow-lg {
+    --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-sm {
+    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .shadow-initial {
     --tw-shadow-color: initial;
+  }
+  .shadow-red-400 {
+    --tw-shadow-color: var(--color-red-400);
   }
   .inset-shadow-initial {
     --tw-inset-shadow-color: initial;
@@ -2369,6 +2529,9 @@
   .transition-normal {
     transition-behavior: normal;
   }
+  .delay-75 {
+    transition-delay: 75ms;
+  }
   .ease-in {
     --tw-ease: var(--ease-in);
     transition-timing-function: var(--ease-in);
@@ -2438,6 +2601,9 @@
   }
   .\[keywords\:node-addon-api\] {
     keywords: node-addon-api;
+  }
+  .\[transition\:all_0\.5s_ease\] {
+    transition: all 0.5s ease;
   }
   .backface-hidden {
     backface-visibility: hidden;
@@ -2530,6 +2696,68 @@
   .transform-view {
     transform-box: view-box;
   }
+  .group-hover\/curso\:bg-\[\#ff6f00\] {
+    &:is(:where(.group\/curso):hover *) {
+      @media (hover: hover) {
+        background-color: #ff6f00;
+      }
+    }
+  }
+  .group-hover\/curso\:text-slate-100 {
+    &:is(:where(.group\/curso):hover *) {
+      @media (hover: hover) {
+        color: var(--color-slate-100);
+      }
+    }
+  }
+  .group-hover\/curso\:text-slate-200 {
+    &:is(:where(.group\/curso):hover *) {
+      @media (hover: hover) {
+        color: var(--color-slate-200);
+      }
+    }
+  }
+  .group-hover\/curso\:text-slate-400 {
+    &:is(:where(.group\/curso):hover *) {
+      @media (hover: hover) {
+        color: var(--color-slate-400);
+      }
+    }
+  }
+  .marker\:text-green-500 {
+    & *::marker {
+      color: var(--color-green-500);
+    }
+    &::marker {
+      color: var(--color-green-500);
+    }
+  }
+  .marker\:text-red-500 {
+    & *::marker {
+      color: var(--color-red-500);
+    }
+    &::marker {
+      color: var(--color-red-500);
+    }
+  }
+  .placeholder\:text-red-400 {
+    &::placeholder {
+      color: var(--color-red-400);
+    }
+  }
+  .placeholder\:italic {
+    &::placeholder {
+      font-style: italic;
+    }
+  }
+  .hover\:-translate-y-1 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-translate-y: calc(var(--spacing) * -1);
+        translate: var(--tw-translate-x) var(--tw-translate-y);
+      }
+    }
+  }
   .hover\:scale-105 {
     &:hover {
       @media (hover: hover) {
@@ -2540,10 +2768,69 @@
       }
     }
   }
+  .hover\:bg-\[\#1A237E\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #1A237E;
+      }
+    }
+  }
   .hover\:bg-\[\#ff6f00\] {
     &:hover {
       @media (hover: hover) {
         background-color: #ff6f00;
+      }
+    }
+  }
+  .hover\:bg-amber-500 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-amber-500);
+      }
+    }
+  }
+  .hover\:bg-gray-100 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-gray-100);
+      }
+    }
+  }
+  .hover\:bg-indigo-600 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-indigo-600);
+      }
+    }
+  }
+  .hover\:bg-white {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-white);
+      }
+    }
+  }
+  .hover\:ring-1 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
+        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+      }
+    }
+  }
+  .hover\:shadow-2xl {
+    &:hover {
+      @media (hover: hover) {
+        --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
+        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+      }
+    }
+  }
+  .hover\:shadow-md {
+    &:hover {
+      @media (hover: hover) {
+        --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
       }
     }
   }
@@ -2553,6 +2840,72 @@
         --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
         box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
       }
+    }
+  }
+  .hover\:ring-indigo-600 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-ring-color: var(--color-indigo-600);
+      }
+    }
+  }
+  .hover\:ring-sky-500 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-ring-color: var(--color-sky-500);
+      }
+    }
+  }
+  .hover\:ring-slate-300 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-ring-color: var(--color-slate-300);
+      }
+    }
+  }
+  .hover\:ring-slate-500 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-ring-color: var(--color-slate-500);
+      }
+    }
+  }
+  .focus\:text-sm {
+    &:focus {
+      font-size: var(--text-sm);
+      line-height: var(--tw-leading, var(--text-sm--line-height));
+    }
+  }
+  .focus\:ring-1 {
+    &:focus {
+      --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+  .focus\:ring-green-500 {
+    &:focus {
+      --tw-ring-color: var(--color-green-500);
+    }
+  }
+  .focus\:ring-red-500 {
+    &:focus {
+      --tw-ring-color: var(--color-red-500);
+    }
+  }
+  .focus\:ring-sky-400 {
+    &:focus {
+      --tw-ring-color: var(--color-sky-400);
+    }
+  }
+  .focus\:ring-sky-500 {
+    &:focus {
+      --tw-ring-color: var(--color-sky-500);
+    }
+  }
+  .focus\:outline-0 {
+    &:focus {
+      outline-style: var(--tw-outline-style);
+      outline-width: 0px;
     }
   }
   .md\:px-16 {
@@ -2734,8 +3087,15 @@
   transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter;
   transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
   transition-duration: var(--tw-duration, var(--default-transition-duration));
+  transition-delay: 75ms;
   --tw-ease: var(--ease-in-out);
   transition-timing-function: var(--ease-in-out);
+  &:hover {
+    @media (hover: hover) {
+      --tw-translate-y: calc(var(--spacing) * -1);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
   &:hover {
     @media (hover: hover) {
       --tw-scale-x: 105%;
@@ -3001,24 +3361,6 @@
   100% {
     opacity: 1;
     transform: scale(1);
-  }
-}
-@keyframes fade-in-y {
-  0% {
-    opacity: 0;
-    transform: translateY(30px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-@keyframes fade-catchau {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
   }
 }
 @property --tw-translate-x {
