--- a/src/output.css
+++ b/src/output.css
@@ -871,6 +871,9 @@
   .mx-2 {
     margin-inline: calc(var(--spacing) * 2);
   }
+  .mx-10 {
+    margin-inline: calc(var(--spacing) * 10);
+  }
   .mx-16 {
     margin-inline: calc(var(--spacing) * 16);
   }
@@ -1027,6 +1030,9 @@
   .h-24 {
     height: calc(var(--spacing) * 24);
   }
+  .h-\[20rem\] {
+    height: 20rem;
+  }
   .h-\[28rem\] {
     height: 28rem;
   }
@@ -1035,6 +1041,15 @@
   }
   .h-\[30rem\] {
     height: 30rem;
+  }
+  .h-\[34rem\] {
+    height: 34rem;
+  }
+  .h-\[40rem\] {
+    height: 40rem;
+  }
+  .h-\[50rem\] {
+    height: 50rem;
   }
   .h-\[100rem\] {
     height: 100rem;
@@ -1051,20 +1066,8 @@
   .h-\[10rems\] {
     height: 10rems;
   }
-  .h-\[20rem\] {
-    height: 20rem;
-  }
-  .h-\[34rem\] {
-    height: 34rem;
-  }
   .h-\[35rem\] {
     height: 35rem;
-  }
-  .h-\[40rem\] {
-    height: 40rem;
-  }
-  .h-\[50rem\] {
-    height: 50rem;
   }
   .h-\[110vh\] {
     height: 110vh;
@@ -2170,6 +2173,9 @@
   .px-16 {
     padding-inline: calc(var(--spacing) * 16);
   }
+  .px-20 {
+    padding-inline: calc(var(--spacing) * 20);
+  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
@@ -2185,8 +2191,14 @@
   .py-9 {
     padding-block: calc(var(--spacing) * 9);
   }
+  .py-10 {
+    padding-block: calc(var(--spacing) * 10);
+  }
   .py-12 {
     padding-block: calc(var(--spacing) * 12);
+  }
+  .py-14 {
+    padding-block: calc(var(--spacing) * 14);
   }
   .py-20 {
     padding-block: calc(var(--spacing) * 20);
@@ -2200,11 +2212,20 @@
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
   }
+  .pt-10 {
+    padding-top: calc(var(--spacing) * 10);
+  }
+  .pt-12 {
+    padding-top: calc(var(--spacing) * 12);
+  }
   .pr-14 {
     padding-right: calc(var(--spacing) * 14);
   }
   .pb-10 {
     padding-bottom: calc(var(--spacing) * 10);
+  }
+  .pb-16 {
+    padding-bottom: calc(var(--spacing) * 16);
   }
   .pb-32 {
     padding-bottom: calc(var(--spacing) * 32);
