--- a/src/css/output.css
+++ b/src/css/output.css
@@ -377,6 +377,7 @@
     --default-mono-font-variation-settings: var(
       --font-mono--font-variation-settings
     );
+    --font-cherolina: 'Cherolina', sans-serif;
     --animate-wiggle: wiggle 1s ease-in-out infinite;
     --animate-fade-in: fade-in 2s ease-in-out;
     --animate-fade-in-fast: fade-in 800ms ease-in-out;
@@ -606,6 +607,30 @@
   .-top-4 {
     top: calc(var(--spacing) * -4);
   }
+  .-top-10 {
+    top: calc(var(--spacing) * -10);
+  }
+  .-top-12 {
+    top: calc(var(--spacing) * -12);
+  }
+  .-top-14 {
+    top: calc(var(--spacing) * -14);
+  }
+  .-top-16 {
+    top: calc(var(--spacing) * -16);
+  }
+  .-top-20 {
+    top: calc(var(--spacing) * -20);
+  }
+  .-top-28 {
+    top: calc(var(--spacing) * -28);
+  }
+  .-top-40 {
+    top: calc(var(--spacing) * -40);
+  }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
   .top-5 {
     top: calc(var(--spacing) * 5);
   }
@@ -614,9 +639,6 @@
   }
   .top-16 {
     top: calc(var(--spacing) * 16);
-  }
-  .top-20 {
-    top: calc(var(--spacing) * 20);
   }
   .top-64 {
     top: calc(var(--spacing) * 64);
@@ -630,8 +652,8 @@
   .-right-24 {
     right: calc(var(--spacing) * -24);
   }
-  .right-7 {
-    right: calc(var(--spacing) * 7);
+  .right-9 {
+    right: calc(var(--spacing) * 9);
   }
   .right-14 {
     right: calc(var(--spacing) * 14);
@@ -650,6 +672,12 @@
   }
   .left-5 {
     left: calc(var(--spacing) * 5);
+  }
+  .left-7 {
+    left: calc(var(--spacing) * 7);
+  }
+  .left-8 {
+    left: calc(var(--spacing) * 8);
   }
   .left-10 {
     left: calc(var(--spacing) * 10);
@@ -807,8 +835,8 @@
   .mt-36 {
     margin-top: calc(var(--spacing) * 36);
   }
-  .mt-56 {
-    margin-top: calc(var(--spacing) * 56);
+  .mt-48 {
+    margin-top: calc(var(--spacing) * 48);
   }
   .mr-5 {
     margin-right: calc(var(--spacing) * 5);
@@ -903,14 +931,41 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
+  .h-5 {
+    height: calc(var(--spacing) * 5);
+  }
   .h-8 {
     height: calc(var(--spacing) * 8);
+  }
+  .h-10 {
+    height: calc(var(--spacing) * 10);
   }
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
   .h-24 {
     height: calc(var(--spacing) * 24);
+  }
+  .h-40 {
+    height: calc(var(--spacing) * 40);
+  }
+  .h-48 {
+    height: calc(var(--spacing) * 48);
+  }
+  .h-52 {
+    height: calc(var(--spacing) * 52);
+  }
+  .h-56 {
+    height: calc(var(--spacing) * 56);
+  }
+  .h-60 {
+    height: calc(var(--spacing) * 60);
+  }
+  .h-64 {
+    height: calc(var(--spacing) * 64);
+  }
+  .h-96 {
+    height: calc(var(--spacing) * 96);
   }
   .h-\[20rem\] {
     height: 20rem;
@@ -960,8 +1015,14 @@
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
+  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
+  }
+  .w-5 {
+    width: calc(var(--spacing) * 5);
   }
   .w-60 {
     width: calc(var(--spacing) * 60);
@@ -1419,8 +1480,14 @@
   .justify-items-stretch {
     justify-items: stretch;
   }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
+  }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
+  }
+  .gap-7 {
+    gap: calc(var(--spacing) * 7);
   }
   .gap-8 {
     gap: calc(var(--spacing) * 8);
@@ -1687,6 +1754,9 @@
   .bg-\[var\(--my_variable\)\] {
     background-color: var(--my_variable);
   }
+  .bg-black {
+    background-color: var(--color-black);
+  }
   .bg-black\/70 {
     background-color: color-mix(in oklab, var(--color-black) 70%, transparent);
   }
@@ -1907,9 +1977,6 @@
   .pt-1 {
     padding-top: calc(var(--spacing) * 1);
   }
-  .pt-4 {
-    padding-top: calc(var(--spacing) * 4);
-  }
   .pt-12 {
     padding-top: calc(var(--spacing) * 12);
   }
@@ -1963,6 +2030,9 @@
   }
   .align-top {
     vertical-align: top;
+  }
+  .font-cherolina {
+    font-family: var(--font-cherolina);
   }
   .text-3xl {
     font-size: var(--text-3xl);
@@ -2636,6 +2706,10 @@
     }
   }
 }
+@font-face {
+  font-family: 'Cherolina';
+  src: url(./src/fonts/Cherolina.ttf) format('truetype');
+}
 @keyframes typewriter {
   0% {
     width: 0px;
@@ -2657,7 +2731,7 @@
   overflow: hidden;
   white-space: nowrap;
   width: 612px;
-  animation: typewriter 2.7s steps(48) alternate , blink 0.5s steps(48);
+  animation: typewriter 2.1s steps(48) alternate , blink 0.5s steps(48);
 }
 .parallax {
   transform: translateY(0);
@@ -2768,11 +2842,33 @@
   }
 }
 .header_text {
-  font-size: var(--text-base);
-  line-height: var(--tw-leading, var(--text-base--line-height));
   --tw-font-weight: var(--font-weight-medium);
   font-weight: var(--font-weight-medium);
   color: var(--color-slate-100);
+  &:hover {
+    @media (hover: hover) {
+      --tw-scale-x: 105%;
+      --tw-scale-y: 105%;
+      --tw-scale-z: 105%;
+      scale: var(--tw-scale-x) var(--tw-scale-y);
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      color: var(--color-white);
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      --tw-shadow-color: var(--color-amber-400);
+    }
+  }
 }
 .header_buttons {
   border-top-left-radius: var(--radius-sm);
@@ -2867,8 +2963,11 @@
   background-color: var(--color-amber-300);
   color: var(--color-blue-600);
 }
-.text_shadow {
+.text_shadow2 {
   text-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
+}
+.text_shadow2 {
+  text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2);
 }
 @layer components {
   .card {
