Fixing some bugs and undoing previous commit

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -292,7 +292,7 @@
 }
 
 .certificado{
-  @apply rounded-md shadow-md;
+  @apply rounded-md shadow-md transition delay-75 hover:scale-105 hover:shadow-xl;
 }
 
 .transition_button{
